--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <!--<script src="/dist/build.js"></script>-->
+    <!--<script src="./dist/pagination.js"></script>-->
+    <script src="./demo/build.js"></script>
   </body>
 </html>
